--- a/src/pages/testing.astro
+++ b/src/pages/testing.astro
@@ -21,7 +21,7 @@
       document.getElementById("replaceWith").addEventListener("click", () => {
         const html = `
           <video autoplay loop muted playsinline preload="auto">
-            <source src="/video.mp4" type="video/mp4">
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
           </video>
         `;
 
@@ -34,7 +34,7 @@
       document.getElementById("innerHtml").addEventListener("click", () => {
         const html = `
           <video autoplay loop muted playsinline preload="auto">
-            <source src="/video.mp4" type="video/mp4">
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
           </video>
         `;
 
@@ -49,7 +49,7 @@
       document.getElementById("importNode").addEventListener("click", () => {
         const html = `
           <video autoplay loop muted playsinline preload="auto">
-            <source src="/video.mp4" type="video/mp4">
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
           </video>
         `;
         const doc = new DOMParser().parseFromString(html, "text/html");
@@ -62,7 +62,7 @@
       document.getElementById("useRange").addEventListener("click", () => {
         const html = `
           <video autoplay loop muted playsinline preload="auto">
-            <source src="/video.mp4" type="video/mp4">
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
           </video>
         `;
         const range = document.createRange();
